--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
@@ -58,4 +58,11 @@ dependencies {
     implementation 'com.stripe:stripe-java:19.5.0'
     implementation 'com.stripe:stripe-android:14.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.karumi:dexter:6.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
 }
