--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.map.hyderrclientsideproject"
-        minSdkVersion 26
+        applicationId "com.map.hyderrclientsideproject.client"
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -65,4 +65,6 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
